--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "allowedHosts": ["missclick.net"]
+          },
           "configurations": {
             "production": {
               "buildTarget": "missclick.net:build:production"
