--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,62 +1,105 @@
 [
   {
+    "imageUrl": {
+      "grid": "https://missclick.net/api/projects/image/gridImage-1747319120069-964644683.png",
+      "list": "https://missclick.net/api/projects/image/listImage-1747319120240-932612770.png"
+    },
+    "_id": "681a07f2a25e89c24bb568e8",
     "title": "Ultimate Converter",
-    "date": "2025",
-    "tags": ["Website", "Software"],
     "description": [
-      "Description of project 1.",
-      "Another line of description for project 1."
+      "The ultimate tool to convert your files and download medias from web !",
+      "Convert images, videos, vectors, audios and archive files easily in a wide range of formats. No ads, no scam, just works !"
     ],
-    "technologies": ["Flask", "FFmpeg", "Python", "HTML", "CSS", "Docker", "JavaScript", "SpotDL", "Youtube-dl", "Inkscape"],
-    "imageUrl": {"grid": "assets/images/projects/ultimate-converter-grid.png", "list": "assets/images/projects/ultimate-converter-list.png"},
-    "link": "https://ultimate-converter.missclick.net"
+    "link": "https://ultimate-converter.missclick.net",
+    "date": "2025-01",
+    "tags": ["Website", "Software"],
+    "technologies": [
+      "Flask",
+      "FFmpeg",
+      "Python",
+      "HTML",
+      "CSS",
+      "Docker",
+      "JavaScript",
+      "SpotDL",
+      "Youtube-dl",
+      "Inkscape"
+    ],
+    "__v": 0
   },
   {
+    "imageUrl": {
+      "grid": "https://missclick.net/api/projects/image/gridImage-1747319145484-402985400.png",
+      "list": "https://missclick.net/api/projects/image/listImage-1747319145570-791094015.png"
+    },
+    "_id": "681a07f2a25e89c24bb568ea",
     "title": "Square Game",
-    "date": "2024",
+    "description": [
+      "SQUARE GAME is a game developed in C using GTK for the graphical user interface. ",
+      "It features both local multiplayer and AI-based gameplay modes, allowing players to compete against each other or challenge an AI opponent."
+    ],
+    "link": "https://github.com/Gabrieleirbag1/Square-Game/releases",
+    "date": "2024-09",
     "tags": ["Website", "Software"],
-    "description": [
-      "Description of project 4.",
-      "Another line of description for project 4."
-    ],
     "technologies": ["HTML", "CSS", "JavaScript"],
-    "imageUrl": {"grid": "assets/images/projects/Square-Game.png", "list": "assets/images/projects/Square-Game.png"},
-    "link": "https://github.com/Gabrieleirbag1/Square-Game/releases"
+    "__v": 0
   },
   {
+    "imageUrl": {
+      "grid": "https://missclick.net/api/projects/image/gridImage-1747319156378-408364149.png",
+      "list": "https://missclick.net/api/projects/image/listImage-1747319156590-311099998.png"
+    },
+    "_id": "681a07f2a25e89c24bb568ec",
     "title": "FindWord",
-    "date": "2024",
+    "description": [
+      "Discover FindWord, the online mini-game where you try to match your friends' intuition!",
+      "In an oceanic universe, try to increase your relationships with as many people as possible. Available only in french !"
+    ],
+    "link": "https://findword.missclick.net",
+    "date": "2024-08",
     "tags": ["Website", "Game"],
-    "description": [
-      "Description of project 2.",
-      "Another line of description for project 2."
+    "technologies": [
+      "Django",
+      "WebSocket",
+      "Python",
+      "HTML",
+      "CSS",
+      "JavaScript"
     ],
-    "technologies": ["Django", "WebSocket", "Python", "HTML", "CSS", "JavaScript"],
-    "imageUrl": {"grid": "assets/images/projects/findword-grid.png", "list": "assets/images/projects/findword-list.png"},
-    "link": "https://findword.missclick.net"
+    "__v": 0
   },
   {
+    "imageUrl": {
+      "grid": "https://missclick.net/api/projects/image/gridImage-1747319132308-832040644.png",
+      "list": "https://missclick.net/api/projects/image/listImage-1747319132842-226376177.png"
+    },
+    "_id": "681a07f2a25e89c24bb568ee",
     "title": "Kaboom",
-    "date": "2024",
-    "tags": ["Game", "Software"],
     "description": [
-      "Description of project 3.",
-      "Another line of description for project 3."
+      "An online multiplayer video game developed entirely in Python with PyQT5.",
+      "Find a word containing the syllable displayed on the screen before the bomb explodes! Be careful, you don't know the time limit!"
     ],
+    "link": "https://github.com/Gabrieleirbag1/Kaboom/releases",
+    "date": "2024-10",
+    "tags": ["Game", "Software"],
     "technologies": ["Python", "PyQt5"],
-    "imageUrl": {"grid": "assets/images/projects/Kaboom.png", "list": "assets/images/projects/Kaboom.png"},
-    "link": "https://github.com/Gabrieleirbag1/Kaboom/releases"
+    "__v": 0
   },
   {
+    "imageUrl": {
+      "grid": "https://missclick.net/api/projects/image/gridImage-1747319168650-120760349.png",
+      "list": "https://missclick.net/api/projects/image/listImage-1747319169101-363078124.png"
+    },
+    "_id": "681a07f2a25e89c24bb568f0",
     "title": "Streaming Power",
-    "date": "2023",
-    "tags": ["Website"],
     "description": [
-      "Description of project 4.",
-      "Another line of description for project 4."
+      "Streamingpower is the new streaming site! A major update is on the way, so get ready!",
+      "In a retro style, you'll be able to watch your favorite films and series in top quality!"
     ],
+    "link": "https://missclick.net/streamingpower/",
+    "date": "2023-10",
+    "tags": ["Website"],
     "technologies": ["Django", "Python", "HTML", "CSS", "JavaScript"],
-    "imageUrl": {"grid": "assets/images/projects/streaming-power-grid.png", "list": "assets/images/projects/streaming-power-list.png"},
-    "link": "https://missclick.net/streamingpower/"
+    "__v": 0
   }
 ]
